# Forex-signals-bot-ai-assistants-

./: api.py  demo.py  index.html  indicators.py  log.txt  main.py  pyproject.toml  replit.md  utils.py  web_app.py
